--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,14 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+
+api_login_check:
+    path: /api/login
+    methods: POST
+    #controller: App\Controller\LoginController:execute
+
+index:
+    path: /allo
+    controller: App\Controller\DefaultController:execute
+    methods: ['GET']
