--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -8,6 +8,12 @@ api_login_check:
     methods: POST
     #controller: App\Controller\LoginController:execute
 
+api_register:
+    path: /api/register
+    methods: POST
+    controller: App\Controller\RegisterController:execute
+
+
 index:
     path: /
     controller: App\Controller\DefaultController:execute
