--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "doctrine/doctrine-bundle": "^2.5",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "google/cloud-firestore": "^1.20",
+        "google/protobuf": "^3.19",
+        "grpc/grpc": "^1.42",
         "kreait/firebase-bundle": "^4.0",
         "kreait/firebase-php": "^6.1",
         "lexik/jwt-authentication-bundle": "^2.14",
