--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    firebase_app_credentials: '%kernel.project_dir%/config/firebase/app_credentials.json'
 services:
     # default configuration for services in *this* file
     _defaults:
